# hello-falcon

./: .gitignore  pyproject.toml
falcon/wsgi/server/: app.py
falcon/wsgi/server/resources/: images.py
falcon/wsgi/tests/: test_app.py
tutorialspoint/asgi/: app.py  db.py
tutorialspoint/asgi/controllers/: jinja.py  main.py  ws.py
tutorialspoint/asgi/helpers/: get_template.py
tutorialspoint/asgi/middlewares/: main.py
tutorialspoint/asgi/models/: students.py
tutorialspoint/asgi/templates/: index.html  websocket.html
tutorialspoint/wsgi/: app.py  inspectapi.py
tutorialspoint/wsgi/controllers/: cookies.py  errors.py  hooks.py  main.py  parameter.py  students.py
tutorialspoint/wsgi/data/: students.py
tutorialspoint/wsgi/hooks/: validator.py
tutorialspoint/wsgi/middlewares/: main.py
wsgi/server/: serve.py
