[project]
name = "hello-falcon"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "falcon (>=4.0.2,<5.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
